lab1/Test/L1-A-3-32.output
Error Type A at Line 2
Error Type A at Line 7
Error Type A at Line 11
Error Type B at Line 17
Error Type B at Line 25
Error Type A at Line 27
Error Type A at Line 30
