lab1/Test/L1-A-3-32.cmm
int comdqayPmc6 ( int SnJ [ 352878631 ] , float iRrcNv3kgxb 
  %, int IMS41uaFk9ac ) {
  float k2 = txBxu218d3 ( H08F ) / UPneLUNvwBXZ7eQ_ 
    / iJu32kKZ3Do41d21JI && m6J && u2zv2T6T3CbzZacGSh78 
    && ex8OUSfBtLYMq0a0ds && euO0n && dnr10Dl && O_33Dv4QiwVBSMIzvQ 
    && A && _ && fftw2gRUkQf6l2 , Tj_8e [ 1905340189 ] 
    &= bE1F3_Yv3ebyYFYx ;
  if ( ! s9KUKPGh0 / kEfqQF * CkNgZHo6_rrFd56yrl - 
    WPCxyqeRkfh7mBG2 + WYjwKQGuQnwh8P6hitf <= mw7mzWxXLTZS 
    < NNhvh4i7XJmV9SeEVu <= zScYlA_ == QEdsyB <= v9DzdpNuogmFYX_4Bp8 
    == m86x5k ^> i73eXqtbE1tTNvhPCgds < z09oe >= Sdhbz2sa 
    != CoLsr == DQjIxIE1 < vYrNzx6M >= j6H_XA1wdfmXhs 
    == lxQt1 > kirIfXOrMg == n6bDsFQAJN_B05eMQo <= yF9Iim_ 
    == eNWVmrg == wQSaOoux4ZE7ZwDpkg9z < aVTGPMIy <= XTHhcc3IBZNW 
    >= Zg8TL8 <= NwHXGB6hvDoHG3s33b && KcQWA9W1qCx3rFbYW 
    || ytYyCLmuAj5kM )   h ;
else   if ( s > )   C9MVEdAIpEJKAwc ;


{
  }}
int qT5FDQfogbx5XDc7 ( struct {
}UDHKhJGmic [ 1733692346 ] [ 612946834 ] [ 1123220287 
  ] , struct Vma1wX v_8tzi7vuGPd6gKJ ) {
  if ( Psjeuu3mX )   NMmR5mJwWDEJ < ;
else   if ( Q1FeepWlBTC )   if ( SK5kZjwWKqe )   Z 
    $;


@
{
  }}
